--- a/NodeBasic/lib/views/admin/products.ejs
+++ b/NodeBasic/lib/views/admin/products.ejs
@@ -21,9 +21,10 @@
                     <p class="product__description"><%= product.description %></p>
                 </div>
                 <div class="card__actions">
-                    <a href="/admin/edit-product/<%= product.id %>" class="btn">Edit</a>
+                    <form action="edit" method="get">
+                        <button class="btn">Edit</button>
+                    </form>
                     <form action="/admin/delete-product" method="POST">
-                        <input type="hidden" name="id" value="<%= product.id %> " />
                         <button class="btn" type="submit">Delete</button>
                     </form>
                 </div>
