--- a/NodeBasic/lib/views/shop/index.ejs
+++ b/NodeBasic/lib/views/shop/index.ejs
@@ -22,7 +22,7 @@
                             <p class="product__description"><%= product.description %></p>
                         </div>
                         <div class="card__actions">
-                            <%- include("../includes/add-to-card-form.ejs", {product: product} ) %>
+                            <button class="btn">Add to Cart</button>
                         </div>
                     </article>
                 <% } %>
