--- a/NodeBasic/lib/views/shop/product-list.ejs
+++ b/NodeBasic/lib/views/shop/product-list.ejs
@@ -21,10 +21,11 @@
                     <p class="product__description"><%= product.description %></p>
                 </div>
                 <div class="card__actions">
-                    <a href="/admin/edit-product/<%= product.id %>" class="btn">Edit</a>
-                    <form action="/admin/delete-product" method="POST">
-                        <input type="hidden" name="id" value="<%= product.id %> " />
-                        <button class="btn" type="submit">Delete</button>
+                    <a href="/products/<%= product.id %>" class="btn">Details</a>
+                    <form action="/add-to-cart" method="POST">
+                        <div class="card__actions">
+                            <button class="btn">Add to Cart</button>
+                        </div>
                     </form>
                 </div>
             </article>
