--- a/NodeBasic/src/views/shop/product-list.ejs
+++ b/NodeBasic/src/views/shop/product-list.ejs
@@ -20,12 +20,10 @@
                     <h2 class="product__price">$<%= product.price %></h2>
                     <p class="product__description"><%= product.description %></p>
                 </div>
-
-                <form action="/add-to-cart" method="POST">
-                    <div class="card__actions">
-                        <button class="btn">Add to Cart</button>
-                    </div>
-                </form>
+                <div class="card__actions">
+                    <a href="/products/<%= product.id %>" class="btn">Details</a>
+                    <%- include("../includes/add-to-card-form.ejs", {product: product} ) %>
+                </div>
             </article>
             <% } %>
         </div>
